--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -55,6 +55,14 @@
 
 </div>
 
+		<div class="center-wrapper">
+	  		<div class="center-wrapper-inner">
+			<%= link_to help_search_path do %>
+				<button class="btn btn-primary" >Search Help</button>
+			<% end %>
+			</div>
+		</div>
+
 <% if signed_in? %>
   <div style="height: 30px"></div>
   <%= render 'layouts/ui/action_tab_favourites' %>
