--- a/plantsuwa/app/views/current_plants/_favourite.html.erb
+++ b/plantsuwa/app/views/current_plants/_favourite.html.erb
@@ -1,5 +1,3 @@
-<%= form_for(current_user.favourites.build(current_plant_id: @current_plant.id),
-             remote: true) do |f| %>
-  <div><%= f.hidden_field :favourite_id %></div>
-  <%= f.submit "Add to Favourites", class: "btn btn-large btn-primary" %>
-<% end %>
+<%= link_to '<i class="fa fa-star" style="color: rgb(255, 145, 0)" title="Favourite"></i>&nbsp;&nbsp;Favourite'.html_safe, create_favourite_path(id: @current_plant.id), method: :new %>
+
+
