more work on favourites, almost done
just needs some styling which i don’t know how to do very well but I’m
assuming you can do it in 5 minutes

--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -7,13 +7,12 @@
 
 
   <div id="tab-descriptions" class="info-body">
-    <legend>Descriptions
+    <legend>Descriptions</legend>
 	<% if signed_in? %>
 	<div>
 		<%= render 'favourite_form' if signed_in? %>
 	</div>
 	<% end %>
-	</legend>
     <% if @current_plant.display_photo.exists? %>
       <%= image_tag @current_plant.display_photo.url(:medium), class: 'display-photo-right' %>
     <% end %>
