--- a/plantsuwa/app/views/current_plants/_favourite.html.erb
+++ b/plantsuwa/app/views/current_plants/_favourite.html.erb
@@ -1,3 +1,3 @@
-<%= link_to '<i class="fa fa-star" style="color: rgb(255, 145, 0)" title="Favourite"></i>&nbsp;&nbsp;Favourite'.html_safe, create_favourite_path(id: @current_plant.id), method: :new %>
+<%= link_to '<i class="fa fa-star" style="color: rgb(255, 145, 0)" title="Favourite"></i>&nbsp;&nbsp;Add Fav'.html_safe, create_favourite_path(id: @current_plant.id), method: :new %>
 
 
