--- a/plantsuwa/app/views/current_plants/_unfavourite.html.erb
+++ b/plantsuwa/app/views/current_plants/_unfavourite.html.erb
@@ -1,1 +1,1 @@
-<%= link_to '<i class="fa fa-minus" style="color: #690000" title="Unfavourite"></i>&nbsp;&nbsp;Unfavourite'.html_safe, destroy_favourite_path(id: @current_plant.id), method: :delete %>
+<%= link_to '<i class="fa fa-star-o" style="color: rgb(255, 145, 0)" title="Unfavourite"></i>&nbsp;&nbsp;Remove Fav'.html_safe, destroy_favourite_path(id: @current_plant.id), method: :delete %>
