--- a/plantsuwa/app/views/current_plants/_current_plant.html.erb
+++ b/plantsuwa/app/views/current_plants/_current_plant.html.erb
@@ -1,6 +1,6 @@
 <div class="plant-index-box">
   <div class="plant-index-box-photo">
-    <%= image_tag current_plant.display_photo.url(:thumb), width:"63px", height:"63px", alt:"Plant photo" %>
+    <%= image_tag '', data: { original: current_plant.display_photo.url(:thumb) }, width:"63px", height:"63px", alt:"", class: "img-lazy" %>
   </div>
   <div class="plant-index-box-content-wrapper">
     <div class="plant-index-box-content">
