little bit more work on favourites (changed the route)

--- a/plantsuwa/app/views/layouts/ui/_action_tab_favourites.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tab_favourites.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
 
-<%= link_to user_favourites_path(current_user) do %>
+<%= link_to favourites_path do %>
 	<div class="action-tab">
 	  <div class="center-wrapper">
 	    <div style="display: inline-block;">
