--- a/plantsuwa/app/views/favourites/index.html.erb
+++ b/plantsuwa/app/views/favourites/index.html.erb
@@ -43,6 +43,10 @@
 
 </div>
 
-
+<% if signed_in? %>
+  <div style="height: 30px"></div>
+  <%= render 'layouts/ui/action_tab_favourites' %>
+  <%= render 'layouts/ui/action_tab_new' %>
+<% end %>
 
 <%= render 'layouts/ui/bottom_tabs_default' %>
