--- a/plantsuwa/app/views/layouts/ui/_action_tab_edit_small.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tab_edit_small.html.erb
@@ -1,5 +1,5 @@
 <%= link_to edit_current_plant_path(@current_plant) do %>
-	<div class="action-tab">
+	<div class="action-tab" style="width: 33.333333%; left: 33.333333%">
 	  <div class="center-wrapper">
 	    <div style="display: inline-block;">
 	      <p><i class="fa fa-edit" style="color: #0000F5"></i>&nbsp;&nbsp;Edit plant</p>
