--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -4,15 +4,16 @@
 
 <div class="padding-mobile">
 
+  <% if is_admin? %>
+  <div style="height: 30px"></div>
+  <% end %>
 
+  <%= render 'favourite_form' if signed_in? %>
 
   <div id="tab-descriptions" class="info-body">
     <legend>Descriptions</legend>
-	<% if signed_in? %>
-	<div>
-		<%= render 'favourite_form' if signed_in? %>
-	</div>
-	<% end %>
+    
+
     <% if @current_plant.display_photo.exists? %>
       <%= image_tag @current_plant.display_photo.url(:medium), class: 'display-photo-right' %>
     <% end %>
@@ -198,8 +199,9 @@
 
 <% if signed_in? %>
   <div style="height: 30px"></div>
-  <%= render 'layouts/ui/action_tab_edit' %>
-  <%= render 'layouts/ui/action_tab_new' %>
+  <%= render 'layouts/ui/action_tab_favourites_small' %>
+  <%= render 'layouts/ui/action_tab_edit_small' %>
+  <%= render 'layouts/ui/action_tab_new_small' %>
 <% end %>
 
 <%= render 'layouts/ui/bottom_tabs_show' %>
