--- a/plantsuwa/app/views/layouts/ui/_action_tab_new_small.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tab_new_small.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
 	<%= link_to new_current_plant_path(pp_name: yield(:title), pp_path: request.path) do %>
-	  <div class="action-tab" style="left: 50%">
+	  <div class="action-tab" style="width: 33.333333%; left: 66.666666%">
 	    <div class="center-wrapper">
 	      <div style="display: inline-block;">
 	        <p><i class="fa fa-tree" style="color: #006300"></i></span>&nbsp;&nbsp;New plant</p>
