--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -739,12 +739,12 @@ tr:nth-child(odd) td:last-child {
 
 
 .favourite-form {
-  position: absolute;
-  right: 60px;
+
   margin-top: -8px;
+  float: right;
 }
 
-.favourite-form a {
+.favourite-form a, a:hover {
   text-decoration: none;
 }
 
