--- a/plantsuwa/app/views/favourites/index.html.erb
+++ b/plantsuwa/app/views/favourites/index.html.erb
@@ -10,7 +10,11 @@
     </div>
   <% end %>
 
-	<h1> Favourites </h1>
+	<div class="center-wrapper">
+  	<div class="center-wrapper-inner">
+			<h2>Favourites</h2>
+		</div>
+	</div>
 
 	<% if @favourites_count > 0 %>
 
