--- a/plantsuwa/app/views/users/show.html.erb
+++ b/plantsuwa/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 
 	<h1 class="h1-shrink" style="color: white"><span class="preceding-heading"><%= link_to 'Users', users_path %> <i class="fa fa-chevron-right"></i></span> <%= formatted_username(@user) %></h1>
-		<div class="btn-group">
+		<div class="btn-group" style="position: absolute; top: 50px; right: 20px">
 
 			<%= link_to edit_user_path(@user), class: 'btn-top btn btn-orange button-shrink', style: 'float: left;' do %>
 				<i class="fa fa-edit"></i><span class="over-500">&nbsp;&nbsp;Edit</span>
@@ -14,7 +14,7 @@
 					<i class="fa fa-trash-o"></i><span class="over-500">&nbsp;&nbsp;Delete</span>
 				<% end %>
 			<% else %>
-				<a class="btn-top btn btn-orange button-shrink", style="float: right;" onclick="alert('You can\'t delete administrator accounts from here. If you really want to delete an administrator, please demote them (via edit) and then delete them.');"><i class="fa fa-ban"></i>&nbsp;(Admin)</a>
+				<a class="btn-top btn btn-orange button-shrink", style="float: right;" onclick="alert('You can\'t delete administrator accounts from here. If you really want to delete an administrator, please demote them (via edit) and then delete them.');"><i class="fa fa-ban"></i><span class="over-500">&nbsp;(Admin)</span></a>
 			<% end %>
 
 		</div>
@@ -24,22 +24,50 @@
 <p><%= @user.email %></p>
 <hr/>
 
-<dt><%= formatted_username(@user) %>'s activity:</dt>
+<div class="row">
 
-<% if !@notifications.any? %>
-	<p>... <%= formatted_username(@user) %> has not done anything yet.</p>
-<% else %>
-	<table class="table table-striped" style="margin-top: -30px">
-		<thead>
-			<tr>
-				<th style="width: 5%">ID</th>
-				<th>Info</th>
-			  <th>Time</th>
-				<th style="width: 90px;" class="th-shrink"></th>
-			</tr>
-		</thead>
-		<tbody>	
-			<%= render @notifications %>
-		</tbody>
-<% end %>
+	<div class="col-md-6">
+		<dt><%= formatted_username(@user) %>'s activity:</dt>
+		<% if !@notifications.any? %>
+			<p class="no-description">... <%= formatted_username(@user) %> has not done anything yet.</p>
+		<% else %>
+			<table class="table table-striped" style="margin-top: 10px">
+				<thead>
+					<tr>
+						<th style="width: 5%">ID</th>
+						<th>Info</th>
+					  <th>Time</th>
+						<th style="width: 90px;" class="th-shrink"></th>
+					</tr>
+				</thead>
+				<tbody>	
+					<%= render @notifications %>
+				</tbody>
+			</table>
+		<% end %>
+		<hr/>
+	</div>
+	<div class="col-md-6">
+		<dt><%= formatted_username(@user) %>'s favourite plants:</dt>
+		<% if !@favourites.any? %>
+			<p class="no-description">... <%= formatted_username(@user) %> has no favourites.</p>
+		<% else %>
+			<table class="table table-striped" style="margin-top: 10px">
+				<thead>
+					<tr>
+						<th style="width: 50px">ID</th>
+						<th style="width: 40px"></th>
+						<th>Name</th>
+						<th style="width: 90px;" class="th-shrink"></th>
+						<th style="width: 90px;" class="th-shrink"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<%= render partial: "current_plants/current_plant_admin", collection: @favourites, as: :current_plant %>
+				</tbody>
+			</table>
+		<% end %>
+		<hr/>
+	</div>
+</div>
 
